uploads: fix source field being too short.

--- a/app/javascript/src/styles/specific/uploads.scss
+++ b/app/javascript/src/styles/specific/uploads.scss
@@ -64,10 +64,6 @@ div#c-uploads {
       display: inline-block;
     }
 
-    div.upload_source {
-      display: inline-block;
-    }
-
     div.upload_rating .radio label {
       font-weight: normal;
       display: inline;
